add more python client frameworks

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ certifi==14.05.14
 gevent==1.0.1
 geventhttpclient==1.1.0
 greenlet==0.4.5
+httplib2==0.9
 requests==2.5.3
+tornado==4.1
+urlfetch==1.0
 wsgiref==0.1.2
