add in __init__

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "param-case": "^1.0.1",
     "pascal-case": "^1.0.0",
     "raml-parser": "^0.8.10",
+    "raml-generator": "^0.1.1",
     "snake-case": "^1.0.1",
     "upper-case": "^1.0.3",
     "yargs": "^3.0.4"
