--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gevent==1.0.1
 geventhttpclient==1.1.0
 greenlet==0.4.5
 httplib2==0.9
+jsonschema==2.4.0
 nose==1.3.4
 requests==2.5.3
 tornado==4.1
