add in javascript program to install plugins

--- a/generators.yaml
+++ b/generators.yaml
@@ -1,9 +1,12 @@
+# The goal with this file is to enable something like the following:
+# ./install_plugin.js python
+# ./install_plugin.js javascript
 repos:
   javascript:
-    repo: https://github.com/mulesoft/raml-client-generator
+    repo: https://github.com/val314159/raml-client-generator
     dir: raml-client-generator
     subdir: languages/javascript
   python:
     repo: https://github.com/val314159/raml-python-generator
     dir: raml-python-generator
-    subdir: https://github.com/val314159/raml-python-generator
+    subdir: languages/python
